[project]
name = "innowise-laboratory"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrey373605",email = "martinovich2005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
